--- a/frontend/src/app/components/partials/map/map.component.css
+++ b/frontend/src/app/components/partials/map/map.component.css
@@ -19,7 +19,7 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 1000;
+  z-index: 500;
   background-color: #ffffff7c;
   cursor: pointer;
 }
